# rutin

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  appendonly.aof.bak  dump.rdb  foo.txt  rustc-ice-2024-06-09T10_31_14-100781.txt  rustc-ice-2024-06-09T10_31_14-100782.txt  rustc-ice-2024-06-29T06_21_14-11766.txt  rustc-ice-2024-06-29T06_21_14-11767.txt  rutin.crt  rutin.key
benches/: bench_batch_throughput&latency_get.html  bench_batch_throughput&latency_set.html  bench_batch_throughput_and_latency_set.html  bench_client_throughput&latency_get.html  bench_client_throughput&latency_set.html  bench_client_throughput_and_latency_set.html  bench_script.py  rutin_benchmark.rs
benches/compare_redis/: bench_client_throughput_and_latency_get.py  result.txt  run_benchmark.py
benches/compare_redis/html/: bench_batch_throughput&latency_get.html  bench_batch_throughput&latency_set.html  bench_client_throughput&latency_get.html  bench_client_throughput&latency_set.html
benches/compare_redis/result/: result_2024-10-09 11:46:34.txt
benches/compare_redis/result/html/: bench_batch_throughput&latency_get.html  bench_client_throughput&latency_get.html  bench_client_throughput&latency_set.html
benches/perf_stat/: redis-benchmark -t set -r 100 -P 100 -n 10000000 -q.txt
benchmark/rutin/: redis-benchmark -t set -r 1 -P 200 -n 1000000.txt
ca/: rutin.crt  rutin.key
config/: conf.example  custom.toml  default.toml
doc/: rutin_implementation_details.md
doc/acl/: acl_cat_admin.txt  acl_cat_bitmap.txt  acl_cat_connection.txt  acl_cat_geo.txt  acl_cat_hyperloglog.txt  acl_cat_scripting.txt  acl_cat_set.txt  acl_cat_sortedset.txt  acl_cat_write.txt
rutin_dashmap/: Cargo.toml
rutin_dashmap/src/: lib.rs  lock.rs  t.rs
rutin_dashmap/src/mapref/: entry_ref.rs
rutin_oram/: Cargo.toml
rutin_oram/src/: main.rs  oram.rs  proxy.rs
rutin_proc/: Cargo.toml
rutin_proc/src/: lib.rs
rutin_proc_macro/: Cargo.toml
rutin_resp3/: Cargo.toml
rutin_resp3/src/: error.rs  lib.rs  resp3.rs
rutin_resp3/src/codec/: decode.rs  encode.rs  mod.rs
rutin_server/: Cargo.toml  ca.7z  tests.7z
rutin_server/benches/compare_redis/: bench_batch_throughput_and_latency_get.py  bench_batch_throughput_and_latency_set.py  bench_client_throughput_and_latency_set.py  main.py
rutin_server/benches/compare_redis/result/: result_2024-10-04 16:27:12.txt  result_2024-10-04 16:29:17.txt  result_2024-10-09 11-46-00.txt
rutin_server/benches/compare_redis/result/html/: bench_batch_throughput&latency_set.html
rutin_server/config/: default.toml
rutin_server/doc/acl/: acl_cat_dangerous.txt  acl_cat_fast.txt  acl_cat_hash.txt  acl_cat_keyspace.txt  acl_cat_list.txt  acl_cat_pubsub.txt  acl_cat_read.txt  acl_cat_slow.txt  acl_cat_stream.txt  acl_cat_string.txt
rutin_server/src/: error.rs  lib.rs  main.rs
rutin_server/src/cmd/: mod.rs
rutin_server/src/cmd/commands/: admin.rs  connection.rs  hash.rs  key.rs  list.rs  mod.rs  pub_sub.rs  script.rs  str.rs
rutin_server/src/conf/: memory.rs  security.rs
rutin_server/src/persist/: aof.rs  mod.rs  rdb.rs
rutin_server/src/server/: connection.rs  handler.rs  listener.rs  mod.rs
rutin_server/src/shared/: mod.rs  post_office.rs
rutin_server/src/shared/db/: mod.rs  object_entry.rs
rutin_server/src/shared/db/object/: event.rs  hash.rs  list.rs  mod.rs
rutin_server/src/shared/script/: lua.rs
rutin_server/src/util/: master.rs  mod.rs  static.rs  unsafe_lazy.rs
rutin_server/tests/appendonly/: test.aof
rutin_server/tests/rdb/: rdb_test.rdb  rdb_test.rdb.bak
src/: cli.rs  conf.rs  connection.rs  error.rs  frame.rs  init.rs  lib.rs  main.rs  server.rs
src/cmd/: error.rs  mod.rs
src/cmd/commands/: acl.rs  admin.rs  connection.rs  hash.rs  key.rs  list.rs  mod.rs  other.rs  pub_sub.rs  replica.rs  script.rs  str.rs
src/conf/: aof.rs  master.rs  memory.rs  mod.rs  rdb.rs  replica.rs  security.rs  server.rs  tls.rs
src/persist/: aof.rs  mod.rs  rdb.rs
src/script/: lua.rs  mod.rs
src/server/: bg_task_channel.rs  connection.rs  error.rs  handler.rs  listener.rs  mod.rs
src/shared/: mod.rs  post_office.rs  propagator.rs  signal_manager.rs  wcmd_propagator.rs
src/shared/db/: error.rs  event.rs  key.rs  mod.rs  object_entry.rs
src/shared/db/object/: event.rs  hash.rs  list.rs  mod.rs  set.rs  str.rs  zset.rs
src/shared/script/: lua.rs  mod.rs
src/util/: fake_cs.rs  key_wrapper.rs  master.rs  mod.rs  nsm.rs  replica.rs  static.rs  test.rs  uppercase.rs
temp/: README.md  connection.rs  fake_cs.rs  fake_cs2.rs  fake_cs3.rs  fake_cs4.rs  frame2.rs  frame3.rs  frame4.rs  frame5.rs  frame7.rs  mod2.rs
temp/persist/: aof.rs  mod.rs  rdb.rs
tests/: mod.rs  replica.rs  replica_test.rs
tests/appendonly/: test.aof  test.aof.bak
tests/dump/: dump_temp.rdb  test2.rdb
tests/lua/: test.lua
tests/rdb/: rdb_test.rdb  rdb_test.rdb.bak  replica_test.rdb  test.rdb
