[package]
name = "rutin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                                            # error handling
futures = "0.3"
bytes = "1.5"                                                                # helps manage buffers
clap = { version = "4.5", features = ["derive"] }
config = "0.14.0"
crc = "3.0.1"
dashmap = { version = "5.5.3", features = ["raw-api", "inline", "rayon"] }
once_cell = "1.19.0"
rand = "0.8.5"
skiplist = "0.5.1"
tokio = { version = "1", features = ["full", "tracing"] }                    # async networking
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue", "nightly"] }
itoa = "1.0.11"
ryu = "1.0.17"
tokio-util = "0.7.10"
atoi = "2.0.0"
async-shutdown = "0.2.2"
flume = { version = "0.11.0", features = ["async", "spin"] }
parking_lot = "0.12.1"
ahash = "0.8.11"
strum = { version = "0.26", features = ["derive"] }
# num_cpus = "1.16.0"
regex = "1.10.4"
# monoio = "0.2.3"
# lockfree-object-pool = "0.1.5"
async-recursion = "1.1.1"
snafu = "0.8.2"
# smallvec = "1.13.2"
tokio-uring = { version = "0.4.0", features = ["bytes"] }
backon = "0.4.4"
rayon = "1.10.0"
# tokio-async-drop = "0.1.0"
console-subscriber = "0.2.0"
try-lock = "0.2.5"
kanal = "0.1.0-pre8"
tokio-rustls = "0.26.0"
tokio-rustls-acme = "0.3.0"
rustls-pemfile = "2.1.2"
rustls = "0.23.7"
mlua = { version = "0.9.8", features = ["lua54", "vendored"] }
either = "1.12.0"
pin-project = "1.1.5"

[dev-dependencies]
assert_cmd = { version = "2.0.14", features = ["color-auto"] }
# redis = "0.25"
# criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

# [[bench]]
# name = "rutinose_bench"
# harness = false

# [profile.release]
# debug = true

[build]
rustflags = ["--cfg", "tokio_unstable"]

# [profile.dev]
# rustflags = ["--cfg", "tokio_unstable"]
#
[profile.release]
# rustflags = ["--cfg", "tokio_unstable"]
# opt-level = "z"   # 或者 "s"，表示进行更小的尺寸优化
opt-level = 3     # 最大优化
lto = true        # 启用链接时优化（Link Time Optimization）
debug = false     # 关闭调试信息
codegen-units = 1 # 减少代码生成单元以提高优化效果
panic = "abort"

[features]
debug = []
